"crux" => "xtdb"
* JDK17 workarounds installed
* fixed Java references
* switched from cursors to list result in Java (simpler)